--- a/KNFDemo/KNFDemo/KNFDemo.csproj
+++ b/KNFDemo/KNFDemo/KNFDemo.csproj
@@ -5919,6 +5919,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Shared\_LayoutPage.cshtml" />
+    <Content Include="Views\Home\Welcome.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
